--- a/notebooks/student_performance_ml.ipynb
+++ b/notebooks/student_performance_ml.ipynb
@@ -1115,6 +1115,7 @@
     "plt.title(\"Top 10 Feature Importances (Random Forest with G1, G2)\")\n",
     "plt.xlabel(\"Feature\")\n",
     "plt.ylabel(\"Importance\")\n",
+    "plt.savefig('../visualisations/feature_importance_g1_g2.png', format='png')\n",
     "plt.show()"
    ]
   },
@@ -1144,6 +1145,7 @@
     "plt.title(\"Top 10 Feature Importances (Random Forest without G1, G2)\")\n",
     "plt.xlabel(\"Feature\")\n",
     "plt.ylabel(\"Importance\")\n",
+    "plt.savefig('../visualisations/feature_importance_no_g1_g2.png', format='png')\n",
     "plt.show()"
    ]
   }
